// src/protos/messages/v1/application.proto

syntax = "proto3";

package de_mls.messages.v1;

message AppMessage {
  oneof payload {
    ConversationMessage conversation_message = 1;
    GroupUpdateMessage group_update_message = 2;
    RemoveUserMessage remove_user_message = 3;
    VoteStartMessage vote_start_message = 4;
  }
}

message GroupUpdateMessage {
  bytes group_name = 1;
  bytes commit_message = 2;
  repeated bytes proposals = 3;
}

message ConversationMessage {
  bytes message = 1;
  string sender = 2;
  string group_name = 3;
}

message RemoveUserMessage {
  bytes user_id = 1;
  bytes group_name = 2;
}

message VoteStartMessage {
  bytes group_name = 1;
}